# trend-lab-trustpack-local-ai-workspace-260601

./: README.md  pyproject.toml
src/trustpack/: main.py
tests/: test_smoke.py
