[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustpack-local-ai-workspace"
version = "0.1.0"
description = "Safe-by-default local AI workspace starter"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "TrustPack" }]
dependencies = []

[project.scripts]
trustpack = "trustpack.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
